<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEditActivity">

    <TextView
        android:id="@+id/medicineNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicine_name" />

    <EditText
        android:id="@+id/medicineNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medicine_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/medicineQuantityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/medicineQuantityEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/quantity"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/addMoreMedicineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+" />

        <EditText
            android:id="@+id/amountOfMedicineToAddEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Amount to add"
            android:inputType="numberDecimal"
            android:visibility="gone" />

        <Button
            android:id="@+id/acceptQuantityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="="
            android:visibility="gone" />

    </LinearLayout>


    <TextView
        android:id="@+id/medicineDailyUsageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_usage" />

    <EditText
        android:id="@+id/medicineDailyUsageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/daily_usage"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>